# psu_tasks

aisd/lab1/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
aisd/lab2/: CMakeLists.txt  task1.cpp  task2.cpp
aisd/lab4/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
aisd/lab5/: CMakeLists.txt  task1.cpp  task2.cpp
aisd/lab8/: CMakeLists.txt  task1.cpp  task2.cpp
aisd/task1/: CMakeLists.txt  main.cpp
aisd/task2/: CMakeLists.txt  main.cpp
ikt_2sem/: CMakeLists.txt  exceptions.h  expression_converter.cpp  expression_converter.h  main.cpp  menu.cpp  menu.h  stack.h
labs/lab15/: CMakeLists.txt  DynamicArray.h  InputHandler.cpp  InputHandler.h  Line.cpp  Line.h  Point.cpp  Point.h  Queue.cpp  Queue.h  Student.cpp  Student.h  Validator.cpp  Validator.h  main.cpp
labs/lab17/: CMakeLists.txt  CalcTree1.cpp  CalcTree1.h  CalcTree23.cpp  CalcTree23.h  ExpressionTree.cpp  ExpressionTree.h  InputHandler.cpp  InputHandler.h  TreeNode.cpp  TreeNode.h  Validator.cpp  Validator.h  main.cpp
labs/lab17/task1/: main.cpp
labs/lab17/task2/: main.cpp
labs/lab18/: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  DoublyList.cpp  DoublyList.h  DynamicArray.h  InputHandler.cpp  InputHandler.h  Map.h  Queue.h  Set.h  Stack.h  TreeFun1.cpp  TreeFun1.h  TreeFun11.cpp  TreeFun11.h  TreeFun3.cpp  TreeFun3.h  TreeNode.cpp  TreeNode.h  Validator.cpp  Validator.h  main.cpp
labs/lab18/task1/: main.cpp
labs/lab18/task2/: main.cpp
labs/lab18/task3/: main.cpp
labs/lab19/: CMakeLists.txt  HammingCode.cpp  HammingCode.h  HuffmanCode.cpp  HuffmanCode.h  HuffmanNode.cpp  HuffmanNode.h  InputHandler.cpp  InputHandler.h  PriorityQueue.h  Validator.cpp  Validator.h  VigenereCipher.cpp  VigenereCipher.h  main.cpp
labs/lab19/task1/: main.cpp
labs/lab19/task2/: main.cpp
labs/lab19/task3/: main.cpp
labs/lab21/: CMakeLists.txt  DirectedGraph.cpp  DirectedGraph.h  DynamicArray.h  Graph.cpp  Graph.h  InputHandler.cpp  InputHandler.h  UndirectedGraph.cpp  UndirectedGraph.h  Validator.cpp  Validator.h  main.cpp
labs/lab21/graf1/: CMakeLists.txt  input.txt  main.cpp
labs/lab21/graf4/: CMakeLists.txt  input.txt  main.cpp
labs/lab21/graf8/: CMakeLists.txt  input.txt  main.cpp
magic_square/: CMakeLists.txt  КонинА.О. ИТ-13_ИКМ.docx
(+121 files in other folders)
