cmake_minimum_required(VERSION 4.0)
project(lab18)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab18 main.cpp
        TreeNode.h
        TreeNode.cpp
        DoublyList.h
        DoublyList.cpp
        BinaryTree.h
        BinaryTree.cpp
        TreeFun1.h
        TreeFun1.cpp
        TreeFun3.h
        TreeFun3.cpp
        TreeFun11.h
        TreeFun11.cpp
        Validator.h
        Validator.cpp
        InputHandler.h
        InputHandler.cpp)
